# mmonitoring

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
_archive/almacena/: README.md
clients/: README.md
clients/almacena/: ALIGNMENT_LEDGER.md  MODEL_CONTRACT.md  README.md  config.yaml  model_rules.yaml
clients/cupffee/: README.md  config.yaml  model_rules.yaml
clients/farada/: MR_LAYOUT.md  README.md  config.yaml  mapping.yaml  model_gates.yaml  model_rules.yaml  onboarding.md
clients/honey/: README.md  config.yaml  (+2 more)
core/: build.py  query.py
docs/: architecture.md  git-workflow.md  onboarding-charts.md  onboarding-report.md  onboarding-text.md
scripts/: build_charts.py  build_db.py  build_farada_5y.py  build_farada_mr.py  build_report.py  check_model.py  model_map.py  validate.py
specs/: data_layer.md
tasks/: plan.md  slides.md  todo.md
tests/: conftest.py  test_aggregate_formulas.py  test_almacena_loans_update.py  test_build_db.py  test_build_report.py  test_chart_render.py  test_chart_spec.py  test_chart_tokens.py  test_design_system.py  test_farada_mr_build.py  test_financial_loader.py  test_integrity.py  test_kpi_loader.py  test_model_cells.py  test_model_contract.py  test_model_flow.py  test_model_format_lint.py  test_model_formula.py  test_model_gates.py  test_model_integrity.py  test_model_mapview.py  test_model_recalc.py  test_model_schema.py  test_mr_loader.py  test_mr_to_taxonomi.py  test_query.py  test_runway.py  test_schema.py  test_skill_references.py  test_spec_lint.py  test_validation.py  test_variance.py
(+168 files in other folders)
