[project]
name = "monitoring"
version = "0.1.0"
description = "Monthly client monitoring tool: data layer + chart inventory"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "matplotlib>=3.9",
    "jsonschema>=4.21",
    "python-pptx>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
